<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">

        <ImageView
            android:id="@+id/ivAboutUs"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

        </ImageView>

        <TextView
            android:id="@+id/tvAboutUsVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alesand_bold"
            android:text="@string/tv_aboutus_version"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivAboutUs" />

        <TextView
            android:id="@+id/tvAboutUsDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_aboutus_desc"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAboutUsVersion" />

        <TextView
            android:id="@+id/tvAboutUsDesc2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_aboutus_desc2"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAboutUsDesc" />

        <TextView
            android:id="@+id/tvAboutUsCredits1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_aboutus_credits1"
            android:textAlignment="center"
            android:layout_marginTop="45dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAboutUsDesc2" />

        <TextView
            android:id="@+id/tvAboutUsCredits2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_aboutus_credits2"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAboutUsCredits1" />

        <TextView
            android:id="@+id/tvAboutUsCredits3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_aboutus_credits3"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAboutUsCredits2" />

        <TextView
            android:id="@+id/tvAboutUsCredits4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_aboutus_credits4"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAboutUsCredits3" />


        <TextView
            android:id="@+id/tvAboutUsCopyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_aboutus_desc3"
            android:textAlignment="center"
            android:layout_marginTop="45dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAboutUsCredits4" />


        <ImageView
            android:id="@+id/ivUEM"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/logouem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAboutUsCopyright">
        </ImageView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>